// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders KuiColorPicker 1`] = `
<div
  class="kuiColorPicker testClass1 testClass2"
  data-test-subj="test subject string"
>
  <div
    class="kuiColorPicker__preview"
  >
    <div
      aria-label="aria-label"
      class="kuiColorPicker__swatch"
      data-test-subj="colorSwatch"
      style="background:#ffeedd"
    />
    <div
      aria-label="Color selection is #ffeedd"
      class="kuiColorPicker__label"
    >
      #ffeedd
    </div>
  </div>
</div>
`;

exports[`renders KuiColorPicker with an empty swatch when color is null 1`] = `
<div
  class="kuiColorPicker testClass1 testClass2"
  data-test-subj="test subject string"
>
  <div
    class="kuiColorPicker__preview"
  >
    <div
      aria-label="aria-label"
      class="kuiColorPicker__swatch kuiColorPicker__emptySwatch"
      data-test-subj="colorSwatch"
      style="background:"
    >
      <svg>
        <line
          x1="0"
          x2="100%"
          y1="100%"
          y2="0"
        />
      </svg>
    </div>
    <div
      aria-label="Color selection is (transparent)"
      class="kuiColorPicker__label"
    >
      (transparent)
    </div>
  </div>
</div>
`;

exports[`renders KuiColorPicker without a color label when showColorLabel is false 1`] = `
<div
  class="kuiColorPicker testClass1 testClass2"
  data-test-subj="test subject string"
>
  <div
    class="kuiColorPicker__preview"
  >
    <div
      aria-label="aria-label"
      class="kuiColorPicker__swatch"
      data-test-subj="colorSwatch"
      style="background:#ffffff"
    />
  </div>
</div>
`;
